--- a/_posts/2025-09-29-v2-1-0.md
+++ b/_posts/2025-09-29-v2-1-0.md
@@ -2,7 +2,15 @@
 layout: post
 title: "Patch v2.1.0 — Início do CrocPRM"
 date: 2025-09-29
+excerpt: "Senhoras e senhores, o início!"
 ---
+
+<div class="post-header">
+  <div class="post-meta">
+    <span class="post-date">📅 29 de Setembro, 2025</span>
+    <span class="post-version">🏷️ v2.1.0</span>
+  </div>
+</div>
 
 ## TL;DR
 - **Rates**: Zeny 3×, XP 2×, Drops 3×.  
@@ -11,7 +19,7 @@ date: 2025-09-29
 - **Bifrostmirror** agora é **account-wide**.  
 - **Random Options** sempre no **valor máximo** + itens já **identificados**.  
 - **Visual Drop** substitui “equip/carta que aumenta drop” no sistema padrão.  
-- Ajustes em **Gift Boxes**: RNG suavizado p/ quests de unchained job.  
+- Ajustes em **Gift Boxes**: RNG suavizado p/ quests dos aneis de unchained job.  
 - **Novo NPC** misterioso no Orfanato.  
 - **Celestial Tome**: exige **30 Hatred quests** + **nível 130**.  
 - **Goblin King Relic** implementada.  
@@ -97,6 +105,11 @@ Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Di
 
 ---
 
-## Download
-- **Cliente atualizado**: [Baixar](https://drive.google.com/uc?export=download&id=SEU_FILE_ID_AQUI)
+<div class="download-section">
+  <h3>📥 Download do Cliente</h3>
+  <p>Baixe a versão mais recente do cliente do CrocPRM e comece sua jornada!</p>
+  <a href="https://drive.google.com/file/d/1HN8GmRmT1tXbHBKS-o3zOPdmdOyEfcmQ" class="btn-download">
+    🎮 Baixar Cliente v2.1.0
+  </a>
+</div>
 
