--- a/_posts/2025-09-29-v2-0-0.md
+++ b/_posts/2025-09-29-v2-0-0.md
@@ -38,17 +38,19 @@ Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Di
 ---
 
 ## Tabela de Drops (base → 3× efetivo)
-| Item / Grupo              | Antes (base) | Agora (base) | Efetivo no 3× |
-|---|---:|---:|---:|
-| **Relics**               | 0,10%        | **0,33%**    | ~**1,0%**     |
-| **Orbs de MVP**          | 0,10%        | **1,00%**    | **3,0%**      |
-| **Lost Rune Coffer**     | 0,5–1,0%     | **2–4%**     | **6–12%**     |
-| **Gift Box**             | 3%           | **6%**       | **18%**       |
-| **Galactic Dust**        | 0,50%      | **0,33%**    | ~**1,0%**     |
+
+| **Item / Grupo** | **Antes (base)** | **Agora (base)** | **Efetivo no 3×** |
+|:-----------------|:----------------:|:----------------:|:-----------------:|
+| **Relics** | 0,10% | **0,33%** | ~**1,0%** |
+| **Orbs de MVP** | 0,10% | **1,00%** | **3,0%** |
+| **Lost Rune Coffer** | 0,5–1,0% | **2–4%** | **6–12%** |
+| **Gift Box** | 3% | **6%** | **18%** |
+| **Galactic Dust** | 0,50% | **0,33%** | ~**1,0%** |
 | **Rachel Nightmare / Caverna de Jorm** | — | **Leve buff** | — |
 
 > **Nota — Galactic Dust**: apesar do nerf, o mapa recebeu uma **trial** (inspirada nos mapas *Distortion* que possuem algum desafio). Essa trial **acelera o farm**, aumenta o ganho de **Galactic Dust** e introduz **uma carta nova**.  
-> **Carta Star Scourge** foi modificada.
+
+**Carta Star Scourge** foi modificada.
 
 ---
 
