--- a/_posts/2025-09-29-v2-0-0.md
+++ b/_posts/2025-09-29-v2-0-0.md
@@ -50,8 +50,6 @@ Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Di
 
 > **Nota — Galactic Dust**: apesar do nerf, o mapa recebeu uma **trial** (inspirada nos mapas *Distortion* que possuem algum desafio). Essa trial **acelera o farm**, aumenta o ganho de **Galactic Dust** e introduz **uma carta nova**.  
 
-**Carta Star Scourge** foi modificada.
-
 ---
 
 ## Gift Boxes (ajuste de probabilidades)
@@ -103,6 +101,7 @@ Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Di
 ## Conteúdo & Mapas
 - **Relic do Goblin King** implementada.  
 - **Abandoned Castle**: passa a dropar **Crumb of Sobbing Starlight** e **Emperium**.
+- **Carta Star Scourge** foi modificada.
 
 
 ---
