--- a/_posts/2025-09-29-v2-0-0.md
+++ b/_posts/2025-09-29-v2-0-0.md
@@ -14,11 +14,12 @@ excerpt: "Senhoras e senhores, o início!"
 
 ## TL;DR
 - **Rates**: Zeny 3×, XP 2×, Drops 3×.  
+- **HP/SP Máximo** aumentado para **55k**.  
 - **XP 126–150** mais suavizada (≈**–60%** de XP total necessária).  
 - **Loot revisado** (Relics, Orbs, Lost Rune Coffer, Galactic Dust, etc.).  
 - **Bifrostmirror** agora é **account-wide**.  
 - **Random Options** sempre no **valor máximo** + itens já **identificados**.  
-- **Visual Drop** substitui “equip/carta que aumenta drop” no sistema padrão.  
+- **Visual Drop** substitui "equip/carta que aumenta drop" no sistema padrão.  
 - Ajustes em **Gift Boxes**: RNG suavizado p/ quests dos aneis de unchained job.  
 - **Novo NPC** misterioso no Orfanato.  
 - **Celestial Tome**: exige **30 Hatred quests** + **nível 130**.  
@@ -31,6 +32,9 @@ excerpt: "Senhoras e senhores, o início!"
 - **Zeny**: **3×**  
 - **XP**: **2×**  
 - **Drops**: **3×**
+
+**HP/SP Máximo**  
+Limite de HP e SP aumentado para **55.000** pontos.
 
 **Suavização de XP (126–150)**  
 Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Distortion de Morroc** rendiam ~**0,24%**/kill.
