--- a/_posts/2025-09-29-v2-0-0.md
+++ b/_posts/2025-09-29-v2-0-0.md
@@ -113,7 +113,15 @@ Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Di
 <div class="download-section">
   <h3>📥 Download do Cliente</h3>
   <p>Baixe a versão mais recente do cliente do CrocPRM e comece sua jornada!</p>
-  <a href="https://drive.google.com/file/d/1HN8GmRmT1tXbHBKS-o3zOPdmdOyEfcmQ" class="btn-download">
+  
+  <!-- Countdown para liberação do download -->
+  <div class="patches-countdown">
+    <div class="countdown-text">📥 Download libera em:</div>
+    <div class="countdown-timer" id="countdownTimer3">--:--:--</div>
+    <div class="countdown-subtitle">Servidor inicia às 21:00</div>
+  </div>
+  
+  <a href="https://drive.google.com/file/d/1HN8GmRmT1tXbHBKS-o3zOPdmdOyEfcmQ" class="btn-download" id="downloadBtn3" style="display: none;">
     🎮 Baixar Cliente v2.0.0
   </a>
 </div>
