--- a/_posts/2025-09-29-v2-0-0.md
+++ b/_posts/2025-09-29-v2-0-0.md
@@ -15,7 +15,7 @@ excerpt: "Senhoras e senhores, o início!"
 - **Rates**: Zeny 3×, XP 2×, Drops 3×.  
 - **HP/SP Máximo** aumentado para **55k**.  
 - **XP 126–150** mais suavizada (≈**–60%** de XP total necessária).  
-- **Loot revisado** (Relics, Orbs, Lost Rune Coffer, Galactic Dust, etc.).  
+- **Loot revisado** (Relics, Orbs, Lost Rune Coffer, Galactic Dust, etc.) + **Cartas MVP 5,01%**.  
 - **Bifrostmirror** agora é **account-wide**.  
 - **Random Options** sempre no **valor máximo** + itens já **identificados**.  
 - **Visual Drop** substitui "equip/carta que aumenta drop" no sistema padrão.  
@@ -38,6 +38,9 @@ Limite de HP e SP aumentado para **55.000** pontos.
 **Suavização de XP (126–150)**  
 Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Distortion de Morroc** rendiam ~**0,24%**/kill.
 
+**Cartas MVP**  
+Taxa de drop ajustada de **3%** para **1,67%** (base), resultando em **5,01%** efetivo com o multiplicador 3×.
+
 ---
 
 ## Tabela de Drops (base → 3× efetivo)
@@ -46,6 +49,7 @@ Redução ~**60%** na XP total necessária. Ex.: no nível **149**, mobs da **Di
 |:-----------------|:----------------:|:----------------:|:-----------------:|
 | **Relics** | 0,10% | **0,33%** | ~**1,0%** |
 | **Orbs de MVP** | 0,10% | **1,00%** | **3,0%** |
+| **Cartas MVP** | 3,00% | **1,67%** | **5,01%** |
 | **Lost Rune Coffer** | 0,5–1,0% | **2–4%** | **6–12%** |
 | **Gift Box** | 3% | **6%** | **18%** |
 | **Galactic Dust** | 0,50% | **0,33%** | ~**1,0%** |
