ajuste nas cartas

--- a/_posts/2025-09-29-v2-0-0.md
+++ b/_posts/2025-09-29-v2-0-0.md
@@ -15,7 +15,7 @@ excerpt: "Senhoras e senhores, o início!"
 - **Rates**: Zeny 3×, XP 2×, Drops 3×.  
 - **HP/SP Máximo** aumentado para **55k**.  
 - **XP 126–150** mais suavizada (≈**–60%** de XP total necessária).  
-- **Loot revisado** (Relics 0,48%, Orbs, Lost Rune Coffer, Galactic Dust, etc.) + **Cartas MVP 5,01%**.  
+- **Loot revisado** (Relics 0,48%, Orbs, Lost Rune Coffer, Galactic Dust, etc.) + **Cartas MVP 5,01%** + **Cartas Normais 2,01%**.  
 - **Bifrostmirror** agora é **account-wide**.  
 - **Random Options** sempre no **valor máximo** + itens já **identificados**.  
 - **Visual Drop** substitui "equip/carta que aumenta drop" no sistema padrão.  
@@ -44,6 +44,9 @@ Taxa de drop ajustada de **3%** para **1,67%** (base), resultando em **5,01%** e
 **Relics**  
 Taxa de drop ajustada de **0,10%** para **0,16%** (base), resultando em **0,48%** efetivo com o multiplicador 3×.
 
+**Cartas Normais**  
+Taxa de drop ajustada de **1,00%** para **0,67%** (base), resultando em **2,01%** efetivo com o multiplicador 3×.
+
 ---
 
 ## Tabela de Drops (base → 3× efetivo)
@@ -53,6 +56,7 @@ Taxa de drop ajustada de **0,10%** para **0,16%** (base), resultando em **0,48%*
 | **Relics** | 0,10% | **0,16%** | **0,48%** |
 | **Orbs de MVP** | 0,10% | **1,00%** | **3,0%** |
 | **Cartas MVP** | 3,00% | **1,67%** | **5,01%** |
+| **Cartas Normais** | 1,00% | **0,67%** | **2,01%** |
 | **Lost Rune Coffer** | 0,5–1,0% | **2–4%** | **6–12%** |
 | **Gift Box** | 3% | **6%** | **18%** |
 | **Galactic Dust** | 0,50% | **0,33%** | ~**1,0%** |
