mais ajustes no texto de drop de cartas

--- a/_posts/2025-09-29-v2-0-0.md
+++ b/_posts/2025-09-29-v2-0-0.md
@@ -12,7 +12,7 @@ excerpt: "Senhoras e senhores, o início!"
 </div>
 
 ## TL;DR
-- **Rates**: Zeny 3×, XP 2×, Drops 3×.  
+- **Rates**: Zeny 3×, XP 2×, Drops 3×. Cartas normais 2,01% e cartas MVP 5,01%.
 - **HP/SP Máximo** aumentado para **55k**.  
 - **XP 126–150** mais suavizada (≈**–60%** de XP total necessária).  
 - **Loot revisado** (Relics 0,48%, Orbs, Lost Rune Coffer, Galactic Dust, etc.) + **Cartas MVP 5,01%** + **Cartas Normais 2,01%**.  
