--- a/_posts/2025-10-01-v2-1-0.md
+++ b/_posts/2025-10-01-v2-1-0.md
@@ -12,39 +12,38 @@ excerpt: "Bugs corrigidos e melhorias para early game!"
 </div>
 
 ## TL;DR
-- **Bugs corrigidos**: Medic Manual X, Illusion of Exchange, Combo Ready, @showexp/@showzeny do Alfred, cartas Star Scourge e Astrologika.
-- **Growth Shadow Coffers** agora dropam de **10 monstros** da faixa **30-50** para melhorar early game.
-- **Random Options** dos Growth Shadow Coffers: valor máximo + atributo reduzido para **3** (era 5).
-- **Peso limite** agora escala com **nível** (não mais STR). No nível 50 = peso de STR 99.
-- **Area Loot** agora tem **custo 0 de SP**.
-- **Rachel Nightmare** foi **dificultada** com nova mecânica para incentivar conteúdo em grupo.
+- **Bugs**: Medic Manual X corrigido, Illusion of Exchange corrigida em mobs, Combo Ready agora aplicado corretamente, @showexp e @showzeny do Alfred permanecem após logout, cartas Star Scourge e Astrologika equipam no head_mid.
+- **Growth Shadow Coffers**: 10 monstros da faixa 30-50 agora dropam.
+- **Random Options**: Growth Shadow Coffers com valor máximo + atributo reduzido para 3 (era 5).
+- **Peso limite**: escala com nível (não mais STR). Nível 50 = peso de STR 99.
+- **Area Loot**: custo 0 de SP.
+- **Rachel Nightmare**: dificultada com nova mecânica para incentivar conteúdo em grupo.
 
 ---
 
 ## Bugs Corrigidos
 
 ### **Medic Manual X**
-- Corrigido para ser reconhecido como **equipamento** (estava como "etc").
+- Corrigido (estava como etc ao invés de equipamento).
 
 ### **Illusion of Exchange**
-- Corrigida em **mobs** - estava tentando criar clone como Illusion, causando bugs.
-- Agora funciona corretamente em mobs.
+- Corrigida em mobs (tava tentando criar clone, como o Illu, isso tava bugando a skill em mobs, agora parece estar funcionando).
 
 ### **Combo Ready**
-- Agora é aplicado corretamente, **mesmo se o mob morrer** com a skill que geraria o Combo Ready.
+- Agora está sendo aplicado, mesmo se o mob morrer com a skill que geraria o Combo Ready.
 
 ### **Alfred - @showexp e @showzeny**
-- Configurações agora **permanecem após logout**.
+- Agora o @showexp e @showzeny do Alfred permanecem após logout.
 
 ### **Cartas - Head Mid**
-- **Star Scourge** e **"a carta nova de Astrologika"** agora equipam no **head_mid**.
+- Cartas Star Scourge e "a carta nova de astrologika" equipam no head_mid.
 
 ---
 
 ## Implementações
 
-### **Growth Shadow Coffers - Early Game**
-Alguns monstros da faixa de nível **30-50** agora dropam **Growth Shadow Coffer** para melhorar a progressão do early game.
+### **Growth Shadow Coffers**
+- Alguns monstros da faixa de nível 30-50 agora dropam Growth Shadow Coffer. Essa mudança visa dar uma opção à mais de progressão para early game.
 
 | **#** | **ID** | **Nome** | **Level** | **Status** |
 |:-----:|:------:|:---------|:---------:|:----------:|
@@ -59,28 +58,15 @@ Alguns monstros da faixa de nível **30-50** agora dropam **Growth Shadow Coffer
 | 9 | 1995 | Pinguicula | 48 | ✅ Adicionado |
 | 10 | 2289 | Strange Man | 35 | ✅ Adicionado |
 
-### **Random Options - Growth Shadow Coffers**
-- **Valor máximo** mantido
-- **Atributo reduzido** de **5** para **3**
+### **Random Options**
+- Com isso, além de tbm as random options virem maximizadas, reduzi o valor do atributo que eles vem para 3 (era 5).
 
 ### **Sistema de Peso**
-- **Peso limite** agora escala com **nível** (não mais com STR)
-- No **nível 50**: peso limite equivalente a **STR 99**
-- Progressão mais suave para todas as classes
+- Agora o peso limite do personagem escala com o nível, e não com o atributo STR. No nivel 50, vc terá o peso limite equivalente à um personagem com 99 de STR.
 
 ### **Area Loot**
-- **Custo de SP** reduzido para **0**
-- Facilita o farm e coleta de itens
+- Area Loot tem custo 0 de SP.
 
-### **Rachel Nightmare - Rebalanceamento**
-- **Dificuldade aumentada** para incentivar conteúdo em **grupo**
-- **Nova mecânica** adicionada
-- Algumas classes estavam solando com facilidade (mesmo no PRM original)
-- **Objetivo**: Manter Rachel NM como conteúdo de grupo
-- **Futuro**: Mais conteúdo focado em **solo** para end game
-
----
-
-## Próximos Passos
-
-Planejamento para adicionar mais conteúdo focado em **solo**, especialmente no **End Game**, para equilibrar a experiência entre conteúdo em grupo e solo.
+### **Rachel Nightmare**
+- Rachel Nightmare foi dificultada e adicionada uma mecanica nova. Algumas classes estavam solando com uma certa facilidade (mesmo no PRM OG) e Rachel NM é um conteúdo que foi introduzido para ser feito em grupo.
+- Dito isso, pretendo adicionar mais conteúdo(s) focado em solo, especialmente no End Game.
