ajustes finais patch v2-1-0

--- a/_posts/2025-10-01-v2-1-0.md
+++ b/_posts/2025-10-01-v2-1-0.md
@@ -18,6 +18,7 @@ excerpt: "Bugs corrigidos e melhorias para early game!"
 - **Peso limite**: escala com nível (não mais STR). Nível 50 = peso de STR 99.
 - **Area Loot**: custo 0 de SP.
 - **Rachel Nightmare**: dificultada com nova mecânica para incentivar conteúdo em grupo.
+- **Mapa da distorção Einbroch Deadlands**: adicionada flag de PVP (como era pra ser).
 
 ---
 
@@ -70,3 +71,6 @@ excerpt: "Bugs corrigidos e melhorias para early game!"
 ### **Rachel Nightmare**
 - Rachel Nightmare foi dificultada e adicionada uma mecanica nova. Algumas classes estavam solando com uma certa facilidade (mesmo no PRM OG) e Rachel NM é um conteúdo que foi introduzido para ser feito em grupo.
 - Dito isso, pretendo adicionar mais conteúdo(s) focado em solo, especialmente no End Game.
+
+### **Mapa da Distorção Einbroch Deadlands**
+- Mapa da distorção Einbroch Deadlands adicionada flag de PVP (como era pra ser).
