--- a/_posts/2025-10-05-v2-1-0.md
+++ b/_posts/2025-10-05-v2-1-0.md
@@ -13,7 +13,7 @@ excerpt: "Bugs corrigidos e melhorias para early game!"
 
 ## TL;DR
 - **Bugs**: Medic Manual X corrigido, Illusion of Exchange corrigida em mobs, Combo Ready agora aplicado corretamente, @showexp e @showzeny do Alfred permanecem após logout, cartas Star Scourge e Astrologika equipam no head_mid.
-- **Growth Shadow Coffers**: 10 monstros da faixa 30-50 agora dropam.
+- **Growth Shadow Coffers**: 10 monstros da faixa 30-50 agora dropam + shadows Unseen World e School of Cats adicionados.
 - **Random Options**: Growth Shadow Coffers com valor máximo + atributo reduzido para 3 (era 5).
 - **Peso limite**: escala com nível (não mais STR). Nível 150 = peso de STR 99.
 - **Area Loot**: custo 0 de SP.
@@ -45,6 +45,7 @@ excerpt: "Bugs corrigidos e melhorias para early game!"
 
 ### **Growth Shadow Coffers**
 - Alguns monstros da faixa de nível 30-50 agora dropam Growth Shadow Coffer. Essa mudança visa dar uma opção à mais de progressão para early game.
+- Foram adicionados à lista de shadows dele os shadows Unseen World e School of Cats.
 
 | **#** | **ID** | **Nome** | **Level** | **Status** |
 |:-----:|:------:|:---------|:---------:|:----------:|
