--- a/_posts/2025-10-11-v2-1-2.md
+++ b/_posts/2025-10-11-v2-1-2.md
@@ -15,7 +15,7 @@ excerpt: "Ajustes importantes nas classes, sistema de combate e correções gera
 - **Illusionist**: Grand Summoning habilitado (50s duração, 30s CD), bug dos clones corrigido, Chaotic Heal ajustado.
 - **Dark Knight - Harvest**: não custa mais SP (custa 10% HP), impede swap de equipamentos, não some com HP baixo.
 - **Peacekeeper**: Eternal Chain corrigida (Combo Ready com Cast Ready).
-- **Adicionado 2 storages**.
+- **Adicionado 1 storage**.
 - **Critical LUK**: corrigido (era 5 LUK, agora 10 LUK por 1% de dano crítico).
 - **Carta Star Scourge**: clone buffado (~60% do dano + crits).
 - **PVP Einbroch Deadlands**: flags corrigidas (ein_dead01, 02 e 03).
@@ -57,8 +57,8 @@ excerpt: "Ajustes importantes nas classes, sistema de combate e correções gera
 
 ## Outras Correções e Ajustes
 
-### **Storages**
-- Adicionado 2 storages.
+### **Storage**
+- Adicionado 1 storage.
 
 ### **Critical Damage - LUK**
 - O dano da arma da mão direita estava escalando 1% de dano crítico a cada **5 pontos de LUK**.
