--- a/_posts/2025-10-11-v2-1-2.md
+++ b/_posts/2025-10-11-v2-1-2.md
@@ -65,7 +65,7 @@ excerpt: "Ajustes importantes nas classes, sistema de combate e correções gera
 - Corrigido para escalar a cada **10 pontos de LUK**.
 
 ### **Carta Star Scourge** 🔒
-- Fortificado o clone, agora ele bate aproximadamente **60% do dano do Player** (e ele também crita agora).
+- Agora o clone bate aproximadamente **60% do dano do Player** (e ele também crita agora).
 - ⚠️ **Isso está em observação, pois pode deixar o Legend ainda mais quebrado.**
 
 ### **PVP Flag - Einbroch Deadlands**
