--- a/_posts/2025-10-11-v2-1-2.md
+++ b/_posts/2025-10-11-v2-1-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Patch v2.1.2 — Correções e Balanceamento"
+title: "Patch v2.1.2 — Correções e Novas Implementações"
 date: 2025-10-11
 excerpt: "Ajustes importantes nas classes, sistema de combate e correções gerais!"
 ---
