--- a/_posts/2025-10-11-v2-1-2.md
+++ b/_posts/2025-10-11-v2-1-2.md
@@ -20,6 +20,7 @@ excerpt: "Ajustes importantes nas classes, sistema de combate e correções gera
 - **Carta Star Scourge**: clone buffado (~60% do dano + crits).
 - **PVP Einbroch Deadlands**: flags corrigidas (ein_dead01, 02 e 03).
 - **ASPD Limit**: modificado de 50 AGI para 40 AGI.
+- **Mini Trial Astrologika**: mais difícil (2-3 cristais, Echo com dobro do HP).
 
 ---
 
@@ -75,6 +76,9 @@ excerpt: "Ajustes importantes nas classes, sistema de combate e correções gera
 
 ### **ASPD Limit**
 - Modificando o aumento de ASPD limit a cada **50 de AGI** para a cada **40 de AGI**.
+
+### **Mini Trial Astrologika**
+- Mais difícil (de 2 - 3 cristais, e o Echo tem o dobro do HP).
 
 ---
 
