--- a/_posts/2025-10-11-v2-1-2.md
+++ b/_posts/2025-10-11-v2-1-2.md
@@ -67,6 +67,8 @@ excerpt: "Ajustes importantes nas classes, sistema de combate e correções gera
 
 ### **Carta Star Scourge** 🔒
 - Agora o clone bate aproximadamente **60% do dano do Player** (e ele também crita agora).
+- Dano foi recalculado. Nova fórmula: **(STR + AGI + VIT + DEX + LUK totais + Base Level) × 3**.
+- Ignora defesa, mas tem alguns efeitos que reduzem o dano.
 - ⚠️ **Isso está em observação, pois pode deixar o Legend ainda mais quebrado.**
 
 ### **PVP Flag - Einbroch Deadlands**
